<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/capture"
    tools:context="com.example.maste.ramen.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="401dp"
        android:layout_height="411dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"

        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">


        <ImageButton
            android:id="@+id/createYourOwnImgBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/create"
            android:contentDescription="@TODO"
            android:textSize="16pt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/dish1ImgBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toEndOf="@+id/createYourOwnImgBtn"
            android:layout_toRightOf="@+id/createYourOwnImgBtn"
            android:background="@drawable/dish1"
            android:contentDescription="@TODO"
            android:textSize="16pt"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <ImageButton
            android:id="@+id/dish2ImgBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toEndOf="@+id/dish1ImgBtn"
            android:layout_toRightOf="@+id/dish1ImgBtn"
            android:background="@drawable/dish2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:contentDescription="@TODO"
            android:textSize="16pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/Create_your_own"
            android:background="@color/Honeydew"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/createYourOwnImgBtn" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/Honeydew"
            android:layout_below="@+id/dish1ImgBtn"
            android:layout_toEndOf="@+id/text1"
            android:layout_toRightOf="@+id/text1"
            android:gravity="center"
            android:text="@string/dish1" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/dish2"
            android:background="@color/Honeydew"
            android:gravity="center"
            android:layout_below="@id/dish2ImgBtn"
            android:layout_toEndOf="@id/text2"
            android:layout_toRightOf="@id/text2" />

        <ImageButton
            android:id="@+id/dish3ImgBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/text1"
            android:background="@drawable/dish3"
            android:contentDescription="@TODO"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16pt"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/dish4ImgBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/text2"
            android:layout_toEndOf="@+id/dish3ImgBtn"
            android:layout_toRightOf="@+id/dish3ImgBtn"
            android:background="@drawable/dish4"
            android:contentDescription="@TODO"
            android:textSize="16pt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/dish5ImgBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/text3"
            android:layout_toEndOf="@+id/text2"
            android:layout_toRightOf="@+id/text2"
            android:background="@drawable/dish5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:contentDescription="@TODO"
            android:textSize="16pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="100dp"
            android:background="@color/Honeydew"
            android:layout_height="100dp"
            android:text="@string/dish3"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/dish3ImgBtn" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/dish4"
            android:background="@color/Honeydew"
            android:gravity="center"
            android:layout_below="@id/dish4ImgBtn"
            android:layout_toEndOf="@id/text4"
            android:layout_toRightOf="@id/text4" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/dish5"
            android:background="@color/Honeydew"
            android:gravity="center"
            android:layout_below="@id/dish5ImgBtn"
            android:layout_toEndOf="@id/text5"
            android:layout_toRightOf="@id/text5" />


    </RelativeLayout>

    <Button
        android:id="@+id/cartBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/white"
        android:text="@string/goCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/homeTest"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="276dp"
        android:layout_marginLeft="276dp"
        android:background="@drawable/white"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/white"
        android:text="@string/addedCart"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

</android.support.constraint.ConstraintLayout>
